--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			<ul>
 				<li class="projets">projets</li>
 				<li>contact</li>
-				<li>login</li>
+				<li><a href="Frontend/login/loginpage.html">login</a></li>
+
 				<li><img src="Frontend/assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
