fit homepage_edit and connexion

--- a/FrontEnd/login/loginpage.html
+++ b/FrontEnd/login/loginpage.html
@@ -27,7 +27,6 @@
   </header>
 
   <main class="container-login">
-
     <form id="login">
       <h1>Log in</h1>
       <div class="container-error"><span class="error"></span></div>
@@ -39,16 +38,13 @@
         <label for="psw"><b>Mot de passe</b></label>
         <input type="password" name="psw" id="psw" required>
 
-        <button type="submit">Se connecter</button>
+        <button type="submit" id="submit">Se connecter</button>
 
       </div>
       <div class="container-psw">
         <a href="#">Mot de passe oublié</a>
       </div>
-
-
     </form>
-
   </main>
 
 
@@ -60,7 +56,7 @@
 
     </nav>
   </footer>
-  <script defer type="text/javascript" src="loginpage.js"></script>
+  <script defer src="loginpage.js"></script>
 </body>
 
 </html>
