--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
 		</div>
 		<!-- Works -->
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
-			<button class="hide" id="buttonAdd">
-				<i class="fa-solid fa-pen-to-square"></i>
-				<b>modifier</b>
-			</button>
+			<div class="project">
+				<h2>Mes Projets</h2>
+				<button class="hide" id="buttonAdd">
+					<i class="fa-solid fa-pen-to-square"></i>
+					<b>modifier</b>
+				</button>
+			</div>
 			<div class="filter-button">
 			</div>
 			<div class="gallery">
