fix error send photo frond end

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="Frontend/landpage/landpage.css">
+	<link rel="stylesheet" type="text/css" href="Frontend/landpage/landpage.css">
 	<script src="https://kit.fontawesome.com/3f00c5a4fa.js" crossorigin="anonymous"></script>
 </head>
 
@@ -114,7 +114,7 @@
 						<input id="title" name="title" type="text" required>
 						<label for="modalCategory">Catégorie</label>
 						<select name="category" id="modalCategory" required>
-							<option value="0"></option>
+							<option value=""></option>
 							<option value="1">Objets</option>
 							<option value="2">Appartements</option>
 							<option value="3">Hôtel & restaurants</option>
